css/global.css
/* ... */
               header a:visited{
                    color:rgba(79,79,79,1);
                    text-decoration:none;
               }

               header a:hover{
                    color:rgba(0,108,184,1);
                    text-decoration:none;
               }

               header a:active{
                    color:rgba(79,79,79,1);
                    text-decoration:none;
               }

          /*Header Cart*/
               #header-icon-cart{
                    font-family:"Fontello";
                    font-size:24px;
               }

     /*Shoppingcart dropdown*/
          #shoppingcart-dropdown{
          display:none;
          width:250px;
          height:300px;
          background-color:#efefef;
          position:absolute;
          z-index:1000;
          top:45px;
          right:10px;
          box-shadow:2px 2px 2px rgba(0,0,0,.25);
          }


          #shoppingcart-header{
          display:inline-block;
          background-color:rgba(74,74,74,1);
          width:100%;
          height:10%;

          }

          #shoppingcart-header p {
          font-family:"Helvetica Neue LT Pro Light";
          font-size:18px;
          margin:8px 0px 3px 8px;
          color:#efefef;
          }

          #shoppingcart-product-field{
          overflow:auto;
          display:inline-block;
          /*background-color:green;*/
          width:100%;
          height:70%;
          float:left;
          }

          .shoppingcart-product{
          display:inline-block;
          /*background-color:blue;*/
          width:95%;
          height:30%;
          margin:2% 2.5% 0% 2.5%;
          border:0.5px black solid;
          }

          #shoppingcart-footer{
          display:inline-block;
          background-color:rgba(74,74,74,1);
          text-align:center;
          width:100%;
          height:20%;
          }

          #shoppingcart-summary{
          width:100%;
          height:70%;
          float:left;
          display:inline-block;
          text-align:left;
          }

          #shoppingcart-summary p{
          color:#efefef;
          margin:0;
          }

          #totals{
          margin-top:5px;
          display:inline-block;
          float:left;
          height:100%;
          width:40%;
          }
          #total-values{
          margin-top:5px;
          display:inline-block;
          float:left;
          height:10%;
          width:30%;
          }

          #shoppingcart-notification{
          width:100%;
          height:30%;
          background-color:rgba(38,160,47,1);
          display:inline-block;
          }

          #shoppingcart-notification p {
          font-family:"Helvetica Neue LT Pro Medium";
          font-size:8px;
          margin:5px 0 0 2px;
          color:black;
          }

     /*Dot navigation*/
          #dot-navigation-container{
               /*background-color:white;*/
               height:auto;
               left:97%;
               position:fixed;
               top:35%;
               width:auto;
               z-index:9;
          }

          #dot-navigation-container ul{
               margin:0;
               padding:0;
          }

          .dot-navigation-icon {
               margin:2px;
               /*background-color:green;*/
          }

          a.anchor{
               display:block;
               position:relative;
               top:-100px;
               visibility:hidden;
          }

          .dot-hover:hover:after{
            background: rgba(0,0,0,.75);
            border-radius: 2px;
            color: #fff;
            content: attr(data-title);
            right:35px;
            padding: 5px 5px 2px 5px;
            position: absolute;
            z-index: 98;
            white-space: nowrap;
            color:#efefef;
            font-size:16px;
            line-height:14px;
          }

          .navigation-dot.hover{
            display:none;
          }

          .dot-hover:hover .navigation-dot{
            display:none;
          }

          .dot-hover:hover .navigation-dot.hover{
            display:inline-block;
          }

/*Content*/
     #content-container{
          background:url("../img/green-cup.png") repeat;
          padding-top:100px;
          padding-bottom:75px;
          width:100%;
     }

     /*First section -- This id tag should only be used once per page*/
          .first-section-margin{
               /*margin-top:100px;*/
          }

     /*Last section -- This id tag should only be used once per page*/
          .last-section-margin{
               /*margin-bottom:100px;*/
          }

     /*All sections*/
          .section-container{
               display:inline-block;
               width:100%;
          }

          .section-content{
               margin:0 auto;
               max-width:1080px;
               padding-bottom:50px;
               padding-top:50px;
          }

          .section-heading{
               color:rgba(74,74,74,1);
               font-family:"Helvetica Neue LT Pro Extended";
               font-size:40px;
          }

          .section-heading-2{
               color:rgba(74,74,74,1);
               font-family:"Helvetica Neue LT Pro Light Extended";
               font-size:32px;
          }

          .section-blurb{
               height:350px;
               overflow:hidden;
          }

          .section-blurb img{
               width:100%;
          }

          /*.section-text{
               font-size:1.1em;
          }*/

/*Footer*/
     #footer-container{
          background-color:rgba(250,250,250,.98);
          width:100%;
     }

     #footer-topbar{
          background-color:rgba(0,108,184,1);
          color:rgba(255,255,255,1);
          padding:8px 0 8px 0;
          text-align:center;
          text-transform:uppercase;
          width:100%;
     }
/* ... */

